--- a/src/app/kng-product/product-grouped-list.component.scss
+++ b/src/app/kng-product/product-grouped-list.component.scss
@@ -34,27 +34,17 @@
     }
   }
   section{
+    display: flex;
+    align-items: center;
+
     &.title{
       text-align:left;
-      padding-top:10px;
-      margin-bottom: 20px;
+      padding-top:0.5rem;
+      margin-bottom: 1rem;
       margin-left: 0px;
-      display: none;
+      background-color: var(--mdc-theme-appbar-light);
     }
 
-    &.category-title{
-      .kng-chip{
-        .inlink{
-          font-size: 1rem;
-          font-weight: 500;
-          color: #2f2fe4;
-        }
-      }
-    }
-
-    &.display{
-      display: block;
-    }
 
     &.child{
       margin: 50px 4px 25px;
